--- a/SiteStyleSheet.css
+++ b/SiteStyleSheet.css
@@ -6,14 +6,16 @@
           /* url("CustomFont.svg#filename") format("svg"); */
         }
         body{
-          background-color: #f9f9ec;
+          background-color: #080708;
         }
         h1 {
           font-family: 'LiberationMono', Arial, sans-serif;
           font-weight:normal;
           font-style:normal;
+          /* font-size: 90%; */
           /* color: #383938; */
-          color: #8c8c8c;
+          opacity: 0.1;
+          color: #F9F7ED;
         }
         .mainlogo{
           display: block;
@@ -23,18 +25,18 @@
           margin-top: 4%;
           /* margin-top: 2%; */
           /* margin-bottom: auto; */
-          width: 30%;
+          width: 35%;
         }
         .center{
           text-align: center;
           margin:auto;
           width: 50%;
-          margin-top: 10%;
+          margin-top: 5%;
           /* padding-left: 15%; */
           margin-left: auto;
           margin-right: auto;
         }
-        
+
 
 
 
